fixed alignment

--- a/static/Flory.css
+++ b/static/Flory.css
@@ -7,7 +7,7 @@
 }
 
 #Header h1 { color: white;
-	     text-align: right;
+	     text-align: center;
 }
 
 #fbox {border: solid black 7px;}
